style: fix QR button misalignment on mobile browsers (#364)
100px width is enough on PC, but it will be misplaced on mobile phone.

--- a/client/src/components/LinkDisplay/Style.module.css
+++ b/client/src/components/LinkDisplay/Style.module.css
@@ -161,7 +161,7 @@
   border-width: 1px;
   font-family: inherit;
   font-size: 18px;
-  width: 100px;
+  width: 110px;
   height: 40px;
   border-radius: 5px;
   cursor: pointer;
